Moved coin specific scripts into coins.config
Moved scripts are cleaned in package.json

--- a/coins.config.json
+++ b/coins.config.json
@@ -1,7 +1,7 @@
 {
   "coins": {
     "TRX":{
-      "packages":"npm run gen-protobuf && npm run gen-protobufts"
+      "packages":"node node_modules/protobufjs/cli/bin/pbjs -t static-module -w commonjs -o ./resources/trx/protobuf/tron.js ./resources/trx/protobuf/Discover.proto ./resources/trx/protobuf/Contract.proto ./resources/trx/protobuf/tron.proto && node node_modules/protobufjs/cli/bin/pbts -o ./resources/trx/protobuf/tron.d.ts ./resources/trx/protobuf/tron.js"
     }
   }
 }
