--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "webpack-dev": "webpack --progress --colors --env.dev",
     "webpack-test": "webpack --progress --colors --env.test",
     "webpack-prod": "webpack --progress --colors --env.prod",
-    "build": "npm run gen-protobuf && npm run gen-protobufts && tsc && cp -r ./resources ./dist",
+    "build": "tsc && cp -r ./resources ./dist",
+    "postinstall": "cmd=$(cat ./configs/$COIN.config.json | jq -r .coins.packages) | $cmd && tsc && cp -r ./resources ./dist",
     "clean": "rm -rf dist/* && rm -rf node_modules/*",
     "compile": "npm run browserify && npm run webpack-prod",
     "compile-dev": "npm run browserify && npm run webpack-dev",
@@ -16,8 +17,6 @@
     "coverage": "npm run gen-coverage && npm run upload-coverage",
     "upload-coverage": "codecov -f coverage.lcov -t \"$CODECOV_TOKEN\"",
     "gen-coverage": "./node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov",
-    "gen-protobuf": "node node_modules/protobufjs/cli/bin/pbjs -t static-module -w commonjs -o ./resources/trx/protobuf/tron.js ./resources/trx/protobuf/Discover.proto ./resources/trx/protobuf/Contract.proto ./resources/trx/protobuf/tron.proto",
-    "gen-protobufts": "node node_modules/protobufjs/cli/bin/pbts -o ./resources/trx/protobuf/tron.d.ts ./resources/trx/protobuf/tron.js",
     "lint": "eslint 'src/**/*.ts' && eslint 'test/**/*.ts' && eslint 'resources/xtz/**/*.ts' || true",
     "lint-fix": "eslint 'src/**/*.ts' --fix && eslint 'test/**/*.ts' --fix  && eslint 'resources/xtz/**/*.ts' --fix || true",
     "prepublishOnly": "npm run compile",
@@ -41,6 +40,7 @@
     "bs58check": "^2.1.2",
     "elliptic": "^6.5.2",
     "libsodium-wrappers": "^0.7.6",
+    "node-jq": "^1.11.0",
     "protobufjs": "^6.8.9",
     "tronweb": "^2.7.2"
   },
