Add preinstall script to set up essential files for each specific file
postintall script is updated to call build script. prepare script is removed as it no longer used in npm install process. It's command was integrated into prepublishOnly script.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "webpack-dev": "webpack --progress --colors --env.dev",
     "webpack-test": "webpack --progress --colors --env.test",
     "webpack-prod": "webpack --progress --colors --env.prod",
+    "preinstall": "cmd=$(cat ./configs/$COIN.config.json | jq -r .coins.packages) | $cmd",
+    "postinstall": "npm run build",
     "build": "tsc && cp -r ./resources ./dist",
-    "postinstall": "cmd=$(cat ./configs/$COIN.config.json | jq -r .coins.packages) | $cmd && tsc && cp -r ./resources ./dist",
     "clean": "rm -rf dist/* && rm -rf node_modules/*",
     "compile": "npm run browserify && npm run webpack-prod",
     "compile-dev": "npm run browserify && npm run webpack-dev",
@@ -19,8 +20,7 @@
     "gen-coverage": "./node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov",
     "lint": "eslint 'src/**/*.ts' && eslint 'test/**/*.ts' && eslint 'resources/xtz/**/*.ts' || true",
     "lint-fix": "eslint 'src/**/*.ts' --fix && eslint 'test/**/*.ts' --fix  && eslint 'resources/xtz/**/*.ts' --fix || true",
-    "prepublishOnly": "npm run compile",
-    "prepare": "npm run build",
+    "prepublishOnly": "npm run build & npm run compile",
     "browserify": "mkdir -p ./dist/browserify && browserify ./dist/src/index.js -s bitgo-account-lib -o ./dist/browserify/bitgo-account-lib.browserify.js",
     "test": "nyc -- mocha --opts test/mocha.opts \"test/unit/**/*.ts\""
   },
