Remove preinstall and postinstall script and add prepare and build script for each coin
preinstall and postinstall are removed for separating the install process and build process. After user runs npm install, they can either run prepare script for a specific type of coin or run build:All to install all types of coins' prerequisites.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "webpack-dev": "webpack --progress --colors --env.dev",
     "webpack-test": "webpack --progress --colors --env.test",
     "webpack-prod": "webpack --progress --colors --env.prod",
-    "preinstall": "cmd=$(cat ./configs/$COIN.config.json | jq -r .coins.packages) | $cmd",
-    "postinstall": "npm run build",
     "build": "tsc && cp -r ./resources ./dist",
+    "prepare:TRX" : "cmd=$(cat ./configs/TRX.config.json | jq -r .coins.packages) | $cmd",
+    "prepare:XTZ" : "cmd=$(cat ./configs/XTZ.config.json | jq -r .coins.packages) | $cmd",
+    "prepare:All": "npm run prepare:TRX && npm run prepare:XTZ ",
+    "build:TRX": "npm run prepare:TRX && npm run build",
+    "build:XTZ": "npm run prepare:XTZ && npm run build",
+    "build:All": "npm run prepare:TRX && npm run prepare:XTZ && npm run build",
     "clean": "rm -rf dist/* && rm -rf node_modules/*",
     "compile": "npm run browserify && npm run webpack-prod",
     "compile-dev": "npm run browserify && npm run webpack-dev",
