Use script to install coin specific dependencies instead of json settings
Remove coin specific json settings. Add coins.config.sh as universal script which will be called in package.json. All other coin specific script can be added into coins.config.sh

--- a/package.json
+++ b/package.json
@@ -8,13 +8,7 @@
     "webpack-dev": "webpack --progress --colors --env.dev",
     "webpack-test": "webpack --progress --colors --env.test",
     "webpack-prod": "webpack --progress --colors --env.prod",
-    "build": "tsc && cp -r ./resources ./dist",
-    "prepare:TRX" : "cmd=$(cat ./configs/TRX.config.json | jq -r .coins.packages) | $cmd",
-    "prepare:XTZ" : "cmd=$(cat ./configs/XTZ.config.json | jq -r .coins.packages) | $cmd",
-    "prepare:All": "npm run prepare:TRX && npm run prepare:XTZ ",
-    "build:TRX": "npm run prepare:TRX && npm run build",
-    "build:XTZ": "npm run prepare:XTZ && npm run build",
-    "build:All": "npm run prepare:TRX && npm run prepare:XTZ && npm run build",
+    "build": "./configs/coins.config.sh & tsc && cp -r ./resources ./dist",
     "clean": "rm -rf dist/* && rm -rf node_modules/*",
     "compile": "npm run browserify && npm run webpack-prod",
     "compile-dev": "npm run browserify && npm run webpack-dev",
@@ -44,7 +38,6 @@
     "bs58check": "^2.1.2",
     "elliptic": "^6.5.2",
     "libsodium-wrappers": "^0.7.6",
-    "node-jq": "^1.11.0",
     "protobufjs": "^6.8.9",
     "tronweb": "^2.7.2"
   },
